[Misc] Refactor tests in refactoring-api